--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,29 +11,35 @@
 #content-block {
     width: 100%;
     height: 550px;
-    background-color: var(--gsp-orange1)
+    background-color: var(--gsp-orange1);
+    position: relative;
 }
 
 #content-block-text-left {
     position: absolute;
-    width: 650px;
-    margin: auto;
+    max-width: 660px;
+    max-height: 500px;
+    word-wrap: break-word;
+    top: 44%;
+    left: 5vw;
+    transform: translateY(-50%);
+    font-size: 250%;
 }
 
 #content-block-image-left {
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    background-size: 1100px;
-    background-position: right;
+    background-size: cover;
+    background-position-y: 50%;
+    background-position-x: 500px;
     mask-image: url('../static/media/content-block-mask.svg');
     mask-repeat: no-repeat;
-    mask-size: 1920px 550px;
+    mask-size: 100% 550px;
     
     -webkit-mask-image: url('../static/media/content-block-mask.svg');
     -webkit-mask-repeat: no-repeat;
-    -webkit-mask-repeat: no-repeat;
-    -webkit-mask-size: 1920px 550px;
+    -webkit-mask-size: 100% 550px;
 }
 
 /* Map */
@@ -58,4 +64,30 @@
     background-color: var(--gsp-grey0);
     width: 100%;
     height: 850px;
+}
+
+/*Mobile Support*/
+
+@media only screen and (max-width: 1450px) {
+    #content-block-image-left {
+        display: none;   
+    }
+
+    #content-block {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #content-block-text-left {
+        left: auto;
+        padding: 10px;
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    #content-block-text-left {
+        font-size: 6.5vw;
+    }
 }
