--- a/src/styles/site-colors.css
+++ b/src/styles/site-colors.css
@@ -6,7 +6,7 @@
     --gsp-grey4: #201e20;
     --gsp-orange0: #ff9f0e;
     --gsp-orange1: #f57d0c;
-    --gsp-orange2: #df610d;
+    --gsp-orange2: #ec650b;
     --gsp-orange3: #dd4e0c;
 }
 
