--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,19 +32,24 @@ code {
 
 /*Navbar*/
 
-#navbar {
-  background-color: var(--gsp-grey2);
-  height: 58px;
+#greater-navbar {
   top: 0;
   margin-top: 0;
   position: sticky;
+  z-index: 5;
+}
+
+#navbar {
+  position: relative;
+  background-color: var(--gsp-grey2);
+  height: 58px;
   padding: 8px;
   align-items: center;
   justify-content: space-evenly;
   -moz-box-shadow: 0 0 25px var(--gsp-orange2);
   -webkit-box-shadow: 0 0 25px var(--gsp-orange2);
   box-shadow: 0 0 25px var(--gsp-orange2);
-  z-index: 5;
+  z-index: 1;
 }
 
 .navbar-item {
@@ -104,6 +109,7 @@ code {
 /* Dropdown dropdownURL */
 
 #dropdownURL {
+  position: relative;
   width: 100%;
   text-align: center;
   border-width:1px;
