--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -55,7 +55,14 @@
 }
 
 #map-render {
-    width: 80%;
+
+}
+
+#station {
+    position: relative;
+    background-color: purple;
+    width: 50px;
+    height: 50px;
 }
 
 /* MINI Analytics */
